infra/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: feature-flags
  labels:
    app: analytics-service
spec:
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8005
    protocol: TCP
    name: http
  selector:
    app: analytics-service
  sessionAffinity: None
